# PyCentiloid

./: .flake8  .gitattributes  LICENSE  implements.md  package_structure  psf.py  pyproject.toml  setup.cfg
pycentiloid/: config.py  template_generation.py  tracer_pipeline.py
pycentiloid/atlas/: manager.py  template.py
pycentiloid/calibration/: __init__.py  centiloid.py
pycentiloid/centiloid/: calculation.py  reference.py  suvr.py  tracer.py
pycentiloid/core/: tracer.py
pycentiloid/preprocessing/: harmonization.py  registration.py  segmentation.py  template_generation.py  tracer_pipeline.py
pycentiloid/processing/: harmonization.py  normalization.py  registration.py  segmentation.py
pycentiloid/reporting/: report_generator.py
pycentiloid/reporting/templates/: amyloid_report.html
pycentiloid/utils/: conversion.py  dicom_sr.py  image_utils.py  llm.py  resolution.py  validation.py
pycentiloid/workflows/: centiloid.py  report.py  template.py
tests/: psf_correction_example.py  test_harmonization.py  test_tracer_pipeline.py
