[metadata]
name = pycentiloid
description = A Python package for Centiloid calculation and PET image processing
long_description = file: README.md
long_description_content_type = text/markdown
author = Haichao Liu
author_email = example@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    scipy>=1.6.0
    antspyx>=0.3.0
    nibabel>=3.2.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    jinja2>=3.0.0
    pydicom>=2.2.0

[options.packages.find]
exclude =
    tests
    docs

[flake8]
max-line-length = 100
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist

[isort]
profile = black
line_length = 100

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*